# sysctl-manager

./: CMakeLists.txt  README.md  cachyos-sysctl-manager.desktop  configure.sh  meson.build  org.cachyos.cachyos-sysctl-manager.pkexec.policy
cmake/: StandardProjectSettings.cmake
scripts/: auto-changelog.sh
src/: main.cpp  sm-window.cpp  sm-window.hpp  sm-window.ui  sysctl_option.cpp  sysctl_option.hpp  utils.cpp  utils.hpp
